--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h2 style="color: black;">a Backend Developer</h2>
             </div>
             <div class="hero-img">
-                <img src="img/dragon-ball-8280091_1280.jpg" alt="Profile picture">
+                <img src="img/juice-wrld.jpg" alt="Profile picture">
             </div>
         </div>
     </section>
